--- a/package.json
+++ b/package.json
@@ -116,6 +116,7 @@
     "import-sort-style-module": "^6.0.0",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
+    "jest-transform-css": "^6.0.1",
     "lint-staged": "^13.1.0",
     "prettier": "^2.8.3",
     "prettier-eslint": "^15.0.1",
