--- a/package.json
+++ b/package.json
@@ -122,6 +122,7 @@
     "prettier-eslint": "^15.0.1",
     "prettier-plugin-import-sort": "^0.0.7",
     "pretty-quick": "^3.1.3",
+    "svg-jest": "^1.0.1",
     "ts-jest": "^29.0.5",
     "typescript": "^4.9.4",
     "typescript-eslint-parser": "^22.0.0"
