--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -31,6 +31,6 @@ jobs:
       - name: Install dependencies
         run: yarn
       - name: Run tests
-        run: yarn test
+        run: yarn test --passWithNoTests
         env:
           NODE_OPTIONS: '--max-old-space-size=8192'
