--- a/package.json
+++ b/package.json
@@ -111,14 +111,14 @@
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.32.0",
     "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-prettier": "5.0.0",
     "husky": "^8.0.3",
     "import-sort-style-module": "^6.0.0",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "jest-transform-css": "^6.0.1",
     "lint-staged": "^15.0.0",
-    "prettier": "^3.0.0",
+    "prettier": "2.8.8",
     "prettier-eslint": "^16.0.0",
     "prettier-plugin-import-sort": "^0.0.7",
     "pretty-quick": "^3.1.3",
