--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -14,10 +14,10 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "typescript": "5.2.2",
     "@next/font": "13.5.4",
     "@types/node": "18.14.0",
     "@types/react": "18.2.32",
-    "@types/react-dom": "18.2.14"
+    "@types/react-dom": "18.2.14",
+    "typescript": "5.2.2"
   }
 }
