renovate on material ui and tailwind css branches

--- a/renovate.json
+++ b/renovate.json
@@ -11,6 +11,7 @@
       "automerge": true
     }
   ],
+  "baseBranches": ["main", "material-ui","tailwind"],
   "platformAutomerge": true,
   "schedule": "monthly"
 }
