--- a/package.json
+++ b/package.json
@@ -1,19 +1,37 @@
 {
-  "name": "my-turborepo",
+  "name": "frontend-monorepo-template",
   "private": true,
   "scripts": {
     "build": "turbo build",
     "dev": "turbo dev",
     "lint": "turbo lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\""
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "prepare": "husky"
   },
   "devDependencies": {
+    "husky": "^9.1.7",
+    "lint-staged": "^15.2.11",
     "prettier": "^3.2.5",
-    "turbo": "^2.3.0",
+    "turbo": "^2.3.3",
     "typescript": "5.5.4"
   },
-  "packageManager": "pnpm@9.0.0",
   "engines": {
     "node": ">=18"
+  },
+  "packageManager": "yarn@1.22.22",
+  "workspaces": [
+    "apps/*",
+    "packages/*"
+  ],
+  "lint-staged": {
+    "apps/web/**/*.{js,ts,jsx,tsx}": [
+      "eslint --max-warnings 0 --config apps/web/eslint.config.js"
+    ],
+    "packages/ui/**/*.{js,ts,jsx,tsx}": [
+      "eslint --max-warnings 0 --config packages/ui/eslint.config.js"
+    ],
+    "{apps,packages}/*": [
+      "prettier --write"
+    ]
   }
 }
