--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -19,6 +19,7 @@
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-turbo": "^2.3.0",
+    "eslint-plugin-storybook": "^0.11.1",
     "globals": "^15.12.0",
     "typescript": "^5.3.3",
     "typescript-eslint": "^8.15.0"
