feat: add MUI to web app

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -6,7 +6,8 @@
   "exports": {
     "./button": "./src/button.tsx",
     "./card": "./src/card.tsx",
-    "./code": "./src/code.tsx"
+    "./code": "./src/code.tsx",
+    "./theme": "./src/theme.ts"
   },
   "scripts": {
     "lint": "eslint . --max-warnings 0",
@@ -30,6 +31,7 @@
     "typescript": "5.5.4"
   },
   "dependencies": {
+    "@mui/material": "^6.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   }
