--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,6 +11,9 @@
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
+    "@emotion/cache": "^11.14.0",
+    "@emotion/react": "^11.14.0",
+    "@mui/material-nextjs": "^6.3.0",
     "@repo/ui": "*",
     "next": "^15.1.0",
     "react": "^19.0.0",
@@ -23,5 +26,8 @@
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
     "typescript": "5.5.4"
+  },
+  "peerDependencies": {
+    "@mui/material": "^6.3.0"
   }
 }
