feat: add mui to storybook

--- a/apps/storybook/package.json
+++ b/apps/storybook/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "storybook",
+  "name": "@repo/storybook",
   "version": "0.1.0",
   "private": true,
   "type": "module",
@@ -12,15 +12,19 @@
     "build:storybook": "storybook build"
   },
   "dependencies": {
+    "@emotion/styled": "^11.14.0",
+    "@fontsource/material-icons": "^5.1.0",
+    "@fontsource/roboto": "^5.1.0",
     "@repo/ui": "*",
+    "@storybook/addon-themes": "^8.4.7",
     "next": "^15.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^3.2.3",
     "@repo/eslint-config": "*",
     "@repo/typescript-config": "*",
-    "@chromatic-com/storybook": "^3.2.3",
     "@storybook/addon-essentials": "^8.4.7",
     "@storybook/addon-interactions": "^8.4.7",
     "@storybook/addon-onboarding": "^8.4.7",
@@ -29,11 +33,12 @@
     "@storybook/react": "^8.4.7",
     "@storybook/test": "^8.4.7",
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "18.3.1",
+    "@types/react-dom": "18.3.1",
     "postcss": "^8",
     "storybook": "^8.4.7",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5.5.4",
+    "webpack": "^5"
   }
 }
