--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,17 +17,15 @@
     "@repo/ui": "*",
     "next": "^15.1.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "@mui/material": "^6.3.0"
   },
   "devDependencies": {
     "@repo/eslint-config": "*",
     "@repo/typescript-config": "*",
     "@types/node": "^20",
     "@types/react": "18.3.1",
-    "@types/react-dom": "18.3.0",
+    "@types/react-dom": "18.3.1",
     "typescript": "5.5.4"
-  },
-  "peerDependencies": {
-    "@mui/material": "^6.3.0"
   }
 }
