--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -23,7 +23,7 @@
     "@swc/jest": "^0.2.37",
     "@turbo/gen": "^1.12.4",
     "@types/node": "^20.11.24",
-    "@types/react": "18.3.0",
+    "@types/react": "18.3.1",
     "@types/react-dom": "18.3.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
@@ -31,8 +31,10 @@
     "typescript": "5.5.4"
   },
   "dependencies": {
-    "@mui/material": "^6.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
+  },
+  "peerDependencies": {
+    "@mui/material": "^6.3.0"
   }
 }
