--- a/turbo.json
+++ b/turbo.json
@@ -14,7 +14,8 @@
       "outputs": [
         ".next/**",
         "!.next/cache/**",
-        "storybook-static/**"
+        "storybook-static/**",
+        "dist/**"
       ]
     },
     "build:storybook": {},
