--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -3,12 +3,16 @@
   "version": "0.0.0",
   "type": "module",
   "private": true,
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
   "exports": {
-    "./button": "./src/button.tsx",
-    "./card": "./src/card.tsx",
-    "./code": "./src/code.tsx"
+    "./theme": "./src/theme.ts",
+    ".":"./dist/index.js"
   },
   "scripts": {
+    "build": "tsup src/index.ts src/components/**/*.tsx --format cjs,esm --dts",
+    "dev": "tsup src/index.ts src/components/**/*.tsx --format cjs,esm --dts --watch",
     "lint": "eslint . --max-warnings 0",
     "generate:component": "turbo gen react-component",
     "check-types": "tsc --noEmit",
@@ -22,7 +26,7 @@
     "@swc/jest": "^0.2.37",
     "@turbo/gen": "^1.12.4",
     "@types/node": "^20.11.24",
-    "@types/react": "18.3.0",
+    "@types/react": "18.3.1",
     "@types/react-dom": "18.3.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
@@ -30,7 +34,9 @@
     "typescript": "5.5.4"
   },
   "dependencies": {
+    "@mui/material": "^6.3.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "tsup": "^8.3.5"
   }
 }
