--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -8,17 +8,19 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint --max-warnings 0",
+    "lint:fix": "next lint --fix",
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
     "@emotion/cache": "^11.14.0",
     "@emotion/react": "^11.14.0",
+    "@mui/material": "^6.3.0",
     "@mui/material-nextjs": "^6.3.0",
     "@repo/ui": "*",
-    "next": "^15.2.4",
+    "next": "^15.5.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "@mui/material": "^6.3.0"
+    "rxjs": "^7.8.1"
   },
   "devDependencies": {
     "@repo/eslint-config": "*",
